--- a/_posts/2024-06-17-72.md
+++ b/_posts/2024-06-17-72.md
@@ -67,7 +67,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 정책브리핑의 정책 뉴스 자료는 「공공누리 제4유형:출처표시+상업적 이용금지+변경금지」에 따라 자유롭게 이용할 수 있으며, 출처를 반드시 표기해야 합니다. 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다.
 
-기사 출처: <a href="https://newsdao.kr/4189">뉴스다오</a>, 자료출처: 정책브리핑 (<a href="www.korea.kr">www.korea.kr</a>) 
+기사 출처: <a href="https://newsdao.kr/4189">뉴스다오</a>, 자료출처: 정책브리핑
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
