--- a/_posts/2024-06-17-87.md
+++ b/_posts/2024-06-17-87.md
@@ -61,7 +61,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <hr>
 <h2 data-ke-size="size26">문의 및 참고 자료</h2>
 <p data-ke-size="size16">문의 : 중소벤처기업부 글로벌성장정책관 기업금융과(044-204-7525)</p>
-<p data-ke-size="size16">정책브리핑의 정책뉴스자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능합니다. 다만, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌될 수 있습니다. <span style="color: #1a5490;">자료출처=정책브리핑 <a href="www.korea.kr">www.korea.kr</a></span></p>
+<p data-ke-size="size16">정책브리핑의 정책뉴스자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능합니다. 다만, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌될 수 있습니다. <span style="color: #1a5490;">자료출처=정책브리핑</span></p>
 <p data-ke-size="size16">출처 : 뉴스다오 - <a href="https://newsdao.kr/4174">소상공인 보증 지원, 1조 원 혜택 확대!</a></p> 
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
