--- a/_posts/2024-06-19-193.md
+++ b/_posts/2024-06-19-193.md
@@ -71,7 +71,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 청주국제공항의 시설 개선과 확장은 중부권 거점공항의 역할을 강화하고 증가하는 수요에 효과적으로 대응하기 위한 중요한 조치입니다. 이러한 프로젝트들을 통해 청주국제공항은 중부권의 대표적인 공항으로 자리매김할 것으로 기대됩니다.
 
 <h2 data-ke-size="size22">참조 링크</h2>
-정책브리핑의 정책뉴스 자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능합니다. 다만, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌될 수 있습니다. <a href="https://newsdao.kr/4293">뉴스다오 기사 바로가기</a> <a href="www.korea.kr">자료출처=정책브리핑 www.korea.kr</a> 
+정책브리핑의 정책뉴스 자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능합니다. 다만, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌될 수 있습니다. <a href="https://newsdao.kr/4293">뉴스다오 기사 바로가기</a> 
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
