--- a/_posts/2024-06-19-288.md
+++ b/_posts/2024-06-19-288.md
@@ -107,7 +107,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <h4>전승자 주최 기획행사</h4>
 다양한 행사들 중에는 유네스코 인류무형유산에 등재된 종묘제례악, 살풀이춤, 양주별산대놀이, 갓일 등이 포함되어 있습니다.
 <p data-ke-size="size16">&nbsp;</p>
-6월 국가무형유산 공개행사와 전승자 주관 기획행사의 상세한 일정은 국가유산청 누리집(<a href="http://www.khs.go.kr">www.khs.go.kr</a>)을 방문하거나, 국가유산진흥원(공개행사: 02-3011-2153, 기획행사: 02-3011-2156)으로 문의하면 자세한 내용을 확인할 수 있습니다.
+6월 국가무형유산 공개행사와 전승자 주관 기획행사의 상세한 일정은 국가유산청 누리집을 방문하거나, 국가유산진흥원(공개행사: 02-3011-2153, 기획행사: 02-3011-2156)으로 문의하면 자세한 내용을 확인할 수 있습니다.
 <p data-ke-size="size16">&nbsp;</p>
 국가무형유산을 친근하게 접할 수 있는 다양한 행사를 통해 국민들의 무형유산 향유 기회가 확대될 예정입니다.
 <p data-ke-size="size16">&nbsp;</p>
