--- a/_posts/2024-06-19-322.md
+++ b/_posts/2024-06-19-322.md
@@ -132,7 +132,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <h2 data-ke-size="size24">정책브리핑의 유의사항</h2>
 <p data-ke-size="size16">정책브리핑의 정보는 「공공누리 제4유형: 출처표시+상업적 이용금지+변경금지」 조건에 따라 자유롭게 이용할 수 있습니다. 사진의 경우 제3자에게 저작권이 있을 수 있으므로 사용할 수 없으며, 기사는 출처를 반드시 표기해야 합니다. 위반 시 저작권법에 따라 처벌될 수 있습니다.</p>
-<p data-ke-size="size16">자료출처=정책브리핑 <a href="www.korea.kr" target="_blank" rel="noopener">www.korea.kr</a></p>
+<p data-ke-size="size16">자료출처=정책브리핑 </p>
 
 <p data-ke-size="size16">다양한 장애인 지원 정책을 통해 더 나은 생활을 누리세요. 각 정책의 신청 방법과 자격 조건을 꼼꼼히 확인하시기 바랍니다.</p> 
 
