--- a/_posts/2024-06-19-371.md
+++ b/_posts/2024-06-19-371.md
@@ -41,7 +41,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <h2 data-ke-size="size26">자료 출처 및 참고 링크</h2>
 <p data-ke-size="size16">&nbsp;</p>
 - <a href="https://newsdao.kr/3923">뉴스다오 기사 링크</a>
-- 정책브리핑 웹사이트(<a href="www.korea.kr">www.korea.kr</a>)
+- 정책브리핑 
 <p data-ke-size="size16">&nbsp;</p>
 
 <h2 data-ke-size="size26">문의 및 연락처</h2>
