--- a/_posts/2024-06-19-373.md
+++ b/_posts/2024-06-19-373.md
@@ -35,7 +35,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <hr>
 
 <h2>문의 및 자세한 내용</h2>
-<p data-ke-size="size16">문의: 국토교통부 도로국 디지털도로팀(044-201-3928), 한국도로공사 영업시스템처(054-811-4110) <br> 자료출처: 정책브리핑 <a href="www.korea.kr">www.korea.kr</a></p>
+<p data-ke-size="size16">문의: 국토교통부 도로국 디지털도로팀(044-201-3928), 한국도로공사 영업시스템처(054-811-4110) <br> 자료출처: 정책브리핑</p>
 <p data-ke-size="size16">기사 출처: 뉴스다오 <a href="https://newsdao.kr/3921">뉴스다오 기사보기</a></p>
 
 <table style="width: 571px; height: 65px;">
