--- a/_posts/2024-06-19-377.md
+++ b/_posts/2024-06-19-377.md
@@ -29,7 +29,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 			<td style="text-align: center; height: 17px;"><b>자료출처</b></td>
 		</tr>
 		<tr>
-			<td style="text-align: center; height: 17px;"><a href="www.korea.kr">정책브리핑 www.korea.kr</a></td>
+			<td style="text-align: center; height: 17px;">정책브리핑 www.korea.kr</td>
 		</tr>
 		<tr>
 			<td style="text-align: center; height: 17px;"><a href="https://newsdao.kr/3917">뉴스다오</a></td>
