--- a/_posts/2024-06-19-427.md
+++ b/_posts/2024-06-19-427.md
@@ -42,7 +42,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
   </tbody>
 </table>
 <p data-ke-size="size16">&nbsp;</p>
-<p><b><span style="color: #1a5490;">자료출처</span></b> : 정책브리핑(<a href="www.korea.kr" target="_blank">www.korea.kr</a>)</p>
+<p><b><span style="color: #1a5490;">자료출처</span></b> : 정책브리핑</p>
 <p><b><span style="color: #1a5490;">원문 보기</span></b> : <a href="https://newsdao.kr/3867" target="_blank">공정위 “PB상품 등 특정상품 개발·판매 행위 자체를 규제하지는 않아” - 공정거래위원… | 뉴스다오</a></p>
 <hr>
 <p data-ke-size="size16">&nbsp;</p> 
