--- a/_posts/2024-06-19-428.md
+++ b/_posts/2024-06-19-428.md
@@ -20,7 +20,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">5월 20일에 실린 한국경제 기사에 따르면, 기획재정부는 유보통합을 앞두고 각 부처와 기관에 흩어져 있는 예산을 통합해 최소 15조원 규모의 특별회계를 신설할 계획이라고 합니다. 또한, 정부는 교육교부금 재원으로 교육세를 유보통합 추가재원으로 투입하는 방안을 검토 중이라고 합니다.</p>
 
 <h2 data-ke-size="size26">기재부의 입장</h2>
-<p data-ke-size="size16">기재부는 현재 유보통합을 준비 중이지만, 특별회계 신설 규모 및 교육세를 유보통합 추가재원으로 투입하는 방안 등의 구체적인 내용은 아직 결정되지 않았다고 밝혔습니다. 이에 대한 자세한 내용은 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)에서 확인할 수 있습니다.</p>
+<p data-ke-size="size16">기재부는 현재 유보통합을 준비 중이지만, 특별회계 신설 규모 및 교육세를 유보통합 추가재원으로 투입하는 방안 등의 구체적인 내용은 아직 결정되지 않았다고 밝혔습니다. 이에 대한 자세한 내용은 정책브리핑에서 확인할 수 있습니다.</p>
 
 <h2 data-ke-size="size26">관련 기사</h2>
 <p data-ke-size="size16">또한, 기재부는 해당 보도에 대한 사실과는 다르다고 주장하고 있으며, 기재부의 입장에 대한 자세한 내용은 뉴스다오(<a href="https://newsdao.kr/3866">https://newsdao.kr/3866</a>)에서 확인할 수 있습니다.</p>
