--- a/_posts/2024-06-19-452.md
+++ b/_posts/2024-06-19-452.md
@@ -22,7 +22,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">문의 : 공정거래위원회 경쟁정책국 디지털경제정책과(044-200-4371)</p>
 
 <h2 data-ke-size="size26">자료 출처</h2>
-<p data-ke-size="size16">정책브리핑 <a href="www.korea.kr">www.korea.kr</a></p>
+<p data-ke-size="size16">정책브리핑 </p>
 
 <table>
   <thead>
