--- a/_posts/2024-06-19-486.md
+++ b/_posts/2024-06-19-486.md
@@ -49,7 +49,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <h3>사실 확인</h3>
 <p data-ke-size="size16">공정거래위원회는 최근 공정위 패소 사건들이 상고심 계류 중이며, 법원의 판단이 확정되지 않았음을 명확히 밝혔습니다.</p>
 
-<p data-ke-size="size16">더 자세한 내용은 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)에서 확인하실 수 있습니다.</p> 
+<p data-ke-size="size16">더 자세한 내용은 정책브리핑에서 확인하실 수 있습니다.</p> 
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
