--- a/_posts/2024-06-19-489.md
+++ b/_posts/2024-06-19-489.md
@@ -40,7 +40,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 </ul>
 <p data-ke-size="size16">최근의 농산물 물가 상승은 기상 악화로 인해 발생한 것으로, 이에 대응하여 중장기적인 대책과 기후위기 대응방안을 마련하고 있습니다.</p>
 <h2 data-ke-size="size26">정책브리핑 자료출처</h2>
-<p data-ke-size="size16">본 자료는 <a href="www.korea.kr">정책브리핑</a>에서 제공된 자료를 기반으로 작성되었습니다.</p>
+<p data-ke-size="size16">본 자료는 정책브리핑에서 제공된 자료를 기반으로 작성되었습니다.</p>
 <p data-ke-size="size16">&nbsp;</p> 
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
