--- a/_posts/2024-06-24-595.md
+++ b/_posts/2024-06-24-595.md
@@ -35,7 +35,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p>의사 집단행동 피해신고·지원센터가 적극 운영될 예정입니다. 긴급한 의료지원이 필요한 경우 국번 없이 ☎129로 연락하면 피해 상황을 신고하고 지원을 받을 수 있습니다.</p>
 
 <h2>정책 자료 이용 안내</h2>
-<p>정책브리핑의 정책뉴스자료는 공공누리 제4유형의 조건에 따라 자유롭게 이용이 가능합니다. 모든 자료를 이용할 때 출처 표기는 필수이며, 이를 위반할 시 법적 처벌을 받을 수 있습니다. 자세한 내용은 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)을 통해 확인할 수 있습니다.</p>
+<p>정책브리핑의 정책뉴스자료는 공공누리 제4유형의 조건에 따라 자유롭게 이용이 가능합니다. 모든 자료를 이용할 때 출처 표기는 필수이며, 이를 위반할 시 법적 처벌을 받을 수 있습니다. 자세한 내용은 정책브리핑을 통해 확인할 수 있습니다.</p>
 
 <p data-ke-size="size16">&nbsp;</p>
 
