--- a/_posts/2024-06-24-618.md
+++ b/_posts/2024-06-24-618.md
@@ -35,7 +35,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 </tbody>
 </table>
 
-<p data-ke-size="size16">해당 음식점의 가격을 사례화하여 보도한 것은 신중을 기해야 하며, 현재 외식 쇠고기 물가 상승률은 전년 동월비 1.9%로 완만한 하락 추세를 보이고 있습니다. 이에 대한 자료 출처는 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)이며, 자세한 내용은 농림축산식품부 식품산업정책관실 식품외식산업과(044-201-2157)로 문의할 수 있습니다.</p>
+<p data-ke-size="size16">해당 음식점의 가격을 사례화하여 보도한 것은 신중을 기해야 하며, 현재 외식 쇠고기 물가 상승률은 전년 동월비 1.9%로 완만한 하락 추세를 보이고 있습니다. 이에 대한 자료 출처는 정책브리핑이며, 자세한 내용은 농림축산식품부 식품산업정책관실 식품외식산업과(044-201-2157)로 문의할 수 있습니다.</p>
 
 <h2 data-ke-size="size26">정확한 정보 공유가 필요합니다</h2>
 농림축산식품부는 외식 쇠고기 물가에 대한 설명을 통해 소비자들이 혼란을 초래할 수 있는 정보의 일반화에 대해 경고하고 있습니다. 따라서 정확하고 신중한 정보 공유가 필요하다고 강조하고 있습니다.
@@ -44,9 +44,6 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 현재의 외식 쇠고기 물가 상승률은 전년 동월비 1.9%로 완만한 하락 추세를 보이고 있습니다.
 
 <p data-ke-size="size16">A프랜차이 고깃집의 등심 130g는 35천원, B프랜차이즈 고깃집의 등심 130g는 38천원이며, 이용객이 상대적으로 적은 음식점으로 일반화하여 보도하는 것은 혼란을 초래할 수 있다는 것입니다.</p>
-
-<h2 data-ke-size="size26">뉴스다오 기사</h2>
-해당 내용은 뉴스다오(<a href="https://newsdao.kr/3764">https://newsdao.kr/3764</a>)에서 확인할 수 있습니다.
 
 <p data-ke-size="size16">&nbsp;</p> 
 
