--- a/_posts/2024-06-24-619.md
+++ b/_posts/2024-06-24-619.md
@@ -37,7 +37,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
    </tbody>
 </table>
 
-<p data-ke-size="size16">행안부 안전예방정책실 안전개선과에 대한 문의는 044-205-4226입니다. 자세한 자료 출처는 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)입니다.</p>
+<p data-ke-size="size16">행안부 안전예방정책실 안전개선과에 대한 문의는 044-205-4226입니다. 자세한 자료 출처는 정책브리핑입니다.</p>
 <p data-ke-size="size16">또한, 해당 내용은 행정안전부에서 직접 제공한 자료이며, 뉴스다오(<a href="https://newsdao.kr/3763">https://newsdao.kr/3763</a>)에서 확인할 수 있습니다.</p>
 <hr>
 
