--- a/_posts/2024-06-24-622.md
+++ b/_posts/2024-06-24-622.md
@@ -44,7 +44,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 		</tr>
 		<tr>
 			<td style="text-align: center; height: 17px;">「공공누리 제4유형:출처표시+상업적 이용금지+변경금지」의 조건에 따라 자유롭게 이용이 가능</td>
-			<td style="text-align: center; height: 17px;"><a href="www.korea.kr">정책브리핑 www.korea.kr</a></td>
+			<td style="text-align: center; height: 17px;">정책브리핑</td>
 		</tr>
 	</tbody>
 </table>
