--- a/_posts/2024-06-24-654.md
+++ b/_posts/2024-06-24-654.md
@@ -48,7 +48,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p data-ke-size="size16">앞으로도 특정 시기에 소비가 증가하는 건강기능식품 등에 대한 사전 점검을 실시하여 안전사고를 예방하고, 불법행위를 점검해 안심할 수 있는 유통 환경을 조성하기로 한 식약처의 노력은 소비자들에게 더 안전하고 신뢰할 수 있는 식품을 제공하기 위한 것입니다.</p>
 
-<p data-ke-size="size16">관련 문의사항은 식품의약품안전처 식품안전정책국 및 수입식품안전정책국으로 연락하거나, 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)에서 보도자료를 확인할 수 있습니다.</p>
+<p data-ke-size="size16">관련 문의사항은 식품의약품안전처 식품안전정책국 및 수입식품안전정책국으로 연락하거나, 정책브리핑에서 보도자료를 확인할 수 있습니다.</p>
 
 이번 점검 결과는 관련 업계 및 소비자들에게 중요한 정보로써, 건강기능식품의 안전성과 품질에 대한 인식을 높일 수 있는 계기가 될 것으로 기대됩니다. 
 
