--- a/_posts/2024-06-24-661.md
+++ b/_posts/2024-06-24-661.md
@@ -27,7 +27,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 해외규격인증획득지원센터 누리집에서는 평가 기간을 줄인 패스트트랙과 그 외 536종의 인증 획득을 지원하는 일반트랙으로 구분하여 운영하고 있습니다. 패스트트랙은 유럽 CE, 미국 FCC, 국제 IECEE, 일본 PSE, 유럽 CPNP, 국제 HALAL, 미국 FDA 등 7종의 인증을 우선적으로 지원하며, 일반트랙은 유럽 CE, 미국 FDA, 중국 NMPA 등 536종의 인증을 지원합니다.
 
 ## 신청 및 문의
-자세한 내용은 중기부 누리집(<a href=‘www.mss.go.kr’>www.mss.go.kr</a>), 해외규격인증획득지원센터 누리집(<a href='www.smes.go.kr/globalcerti'>www.smes.go.kr/globalcerti</a>), 관리기관 누리집(<a href=‘www.ktr.or.kr’>www.ktr.or.kr</a>)에서 확인할 수 있으며, 신청은 해외규격인증획득지원센터 누리집에서 접속하여 신청할 수 있습니다. 또한, 관련 문의사항은 중소벤처기업부 글로벌성장정책과(044-204-7507)로 문의할 수 있습니다.
+자세한 내용은 중기부 누리집, 해외규격인증획득지원센터 누리집, 관리기관 누리집에서 확인할 수 있으며, 신청은 해외규격인증획득지원센터 누리집에서 접속하여 신청할 수 있습니다. 또한, 관련 문의사항은 중소벤처기업부 글로벌성장정책과(044-204-7507)로 문의할 수 있습니다.
 
 이번 정부 지원사업은 중소기업의 글로벌 시장 진출을 지원하여 국내 중소기업들의 경쟁력을 높이는 한편, 해외규격인증의 어려움을 최소화하는 데 큰 도움이 될 것입니다. 
 
