--- a/_posts/2024-06-24-676.md
+++ b/_posts/2024-06-24-676.md
@@ -27,7 +27,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 		<td style="text-align: center; height: 17px;"><b>전화 문의</b></td>
 	</tr>
 	<tr>
-		<td style="text-align: center; height: 17px;">'평화의 길' 누리집(<a href="www.dmzwalk.com">www.dmzwalk.com</a>) 및 걷기여행 모바일 앱 '두루누비'에서 사전 신청</td>
+		<td style="text-align: center; height: 17px;">'평화의 길' 누리집 및 걷기여행 모바일 앱 '두루누비'에서 사전 신청</td>
 		<td style="text-align: center; height: 17px;">문화체육관광부 국내관광진흥과: 044-203-2857</td>
 	</tr>
 </table>
