--- a/_posts/2024-06-24-677.md
+++ b/_posts/2024-06-24-677.md
@@ -31,8 +31,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <h3>문의</h3>
 <ul>
     <li>청소년상담 : ☎1388 (휴대전화는 국번+1388, 사이버1388청소년상담센터)</li>
-    <li>학교밖청소년지원센터 꿈드림정책브리핑의 정책뉴스 자료는 「공공누리 제4유형:출처표시+상업적 이용금지+변경금지」의 조건에 따라 자유롭게 이용이 가능합니다. 다만, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌될 수 있습니다. <b>자료출처</b>=정책브리핑 <a href="www.korea.kr">www.korea.kr</a></li>
-    <li>학교 밖 청소년에 직업훈련 지원…연간 360만원 - 여성가족부 | 뉴스다오 : <a href="https://newsdao.kr/3705">https://newsdao.kr/3705</a></li>
+    <li>학교밖청소년지원센터 꿈드림정책브리핑의 정책뉴스 자료는 「공공누리 제4유형:출처표시+상업적 이용금지+변경금지」의 조건에 따라 자유롭게 이용이 가능합니다. 다만, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌될 수 있습니다. <b>자료출처</b>=정책브리핑</li>
 </ul>
 
 <p data-ke-size="size16">위 프로그램에 대한 상세한 내용 또는 신청에 대한 추가적인 정보가 필요한 경우, 상기 문의처로 연락하여 상세 내용을 확인하시기 바랍니다.</p>
