--- a/_posts/2024-06-24-767.md
+++ b/_posts/2024-06-24-767.md
@@ -23,16 +23,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <h2 data-ke-size="size26">전반적인 품질 향상을 위한 노력</h2>
 <p data-ke-size="size16">또한, 기사에서 언급된 몇 가지 사례는 문체부 지원으로 조성된 작품은 아니라고 하며, 해당 지자체에 사실을 확인하고 유사사례 발생 방지 방안을 모색하여 우리나라 공공미술의 전반적인 품질을 높이겠다고 합니다.</p>
-<p data-ke-size="size16">자세한 사항은 문화체육관광부 문화예술정책실 시각예술디자인과로 문의하시기 바라며, 참고로 자료 출처는 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)입니다.</p>
-<table>
-  <thead>
-    <tr></tr>
-  </thead>
-  <tbody>
-    <tr></tr>
-  </tbody>
-</table>
-<hr> 
+<p data-ke-size="size16">자세한 사항은 문화체육관광부 문화예술정책실 시각예술디자인과로 문의하시기 바라며, 참고로 자료 출처는 정책브리핑입니다.</p>
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
