--- a/_posts/2024-06-24-830.md
+++ b/_posts/2024-06-24-830.md
@@ -32,10 +32,9 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">과학기술정보통신부는 해당 기사에 제시된 내용에 대해 명확한 설명을 제공하여 논란을 해소하고 있습니다. 이에 따라 정확한 사실 확인이 필요한 시점에서 해당 부처의 설명이 중요한 역할을 하고 있습니다.</p>
 <p data-ke-size="size16">&nbsp;</p>
 <h2 data-ke-size="size26">자료 출처</h2>
-<p data-ke-size="size16">이 기사는 정책브리핑 웹사이트(<a href="www.korea.kr">www.korea.kr</a>)에서 확인할 수 있습니다.</p>
+<p data-ke-size="size16">이 기사는 정책브리핑에서 확인할 수 있습니다.</p>
 <p data-ke-size="size16">&nbsp;</p>
 <hr>
-<p data-ke-size="size16">&nbsp;</p> 
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
