--- a/_posts/2024-06-24-935.md
+++ b/_posts/2024-06-24-935.md
@@ -63,7 +63,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <hr>
 
-<p data-ke-size="size16">참고: 법무부 인권국 인권정책과(02-2110-3649) | 자료출처: 정책브리핑 <a href="www.korea.kr">www.korea.kr</a></p> 
+<p data-ke-size="size16">참고: 법무부 인권국 인권정책과(02-2110-3649) | 자료출처: 정책브리핑</p> 
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
