--- a/_posts/2024-06-24-979.md
+++ b/_posts/2024-06-24-979.md
@@ -15,7 +15,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p>출처: <a href="https://newsdao.kr/3401" rel="dofollow">[사실은 이렇습니다] 농식품부 “지역농축협 설립기준 완화, 검토된 바 없어” - 농림축산식품부</a> | 뉴스다오</p>
 
-<h1>정부, ‘농축협 조합’ 설립 기준 완화추진…농촌 인구 감소 반영</h1>
+<h2>정부, ‘농축협 조합’ 설립 기준 완화추진…농촌 인구 감소 반영</h2>
 
 <p data-ke-size="size16">3월 21일에 조선일보biz에서 보도된 내용에 따르면 정부가 농협과 축협의 지역조합 설립에 필요한 인원을 줄이는 작업에 나섰다고 합니다. 하지만 이에 대한 농림축산식품부의 입장은 전혀 다릅니다. 아래에서 자세한 내용을 확인해보세요.</p>
 
@@ -38,7 +38,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 	</tbody>
 </table>
 
-<p data-ke-size="size16">위의 내용은 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)에서 제공된 자료입니다.</p>
+<p data-ke-size="size16">위의 내용은 정책브리핑에서 제공된 자료입니다.</p>
 
 <hr>
 
