--- a/_posts/2024-06-24-1061.md
+++ b/_posts/2024-06-24-1061.md
@@ -1,5 +1,5 @@
 ---
-title: “후쿠시마 원전 오염수 국무조정실에서의 일일 브리핑(3.12.)”
+title: 후쿠시마 원전 오염수 국무조정실에서의 일일 브리핑(3.12.)
 categories:
   - News
 excerpt: >
@@ -15,7 +15,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p>출처: <a href="https://newsdao.kr/3319" rel="dofollow">후쿠시마 원전 오염수 방류 관련 일일 브리핑(3.12.)  - 국무조정실</a> | 뉴스다오</p>
 
-<h1>수산물 안전 관리 소식 브리핑</h1>
+<h2>수산물 안전 관리 소식 브리핑</h2>
 
 <p data-ke-size="size16">&nbsp;</p>
 
@@ -43,7 +43,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <h2 data-ke-size="size26">정책브리핑의 정책뉴스 자료 이용 안내</h2>
 
-<p>정책브리핑의 정책뉴스 자료는 「공공누리 제4유형:출처표시+상업적 이용금지+변경금지」의 조건에 따라 자유롭게 이용이 가능합니다. 단, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해주시기 바라며, 이에 반하지 않도록 유의해주시기 바랍니다. (자료출처: 정책브리핑 <a href="www.korea.kr">www.korea.kr</a>)</p>
+<p>정책브리핑의 정책뉴스 자료는 「공공누리 제4유형:출처표시+상업적 이용금지+변경금지」의 조건에 따라 자유롭게 이용이 가능합니다. 단, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해주시기 바라며, 이에 반하지 않도록 유의해주시기 바랍니다. </p>
 
 <p data-ke-size="size16">&nbsp;</p>
 
