--- a/_posts/2024-06-24-1075.md
+++ b/_posts/2024-06-24-1075.md
@@ -43,15 +43,14 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">주최기관인 ㈜엠와이소셜컴퍼니가 보유한 인적 물적 자원(인프라)을 활용해 참여기업에 보육공간, 글로벌 역량진단, 글로벌 팝업스토어, 직간접 투자 등의 다양한 특화 프로그램도 지원합니다.</p>
 
 <h2 data-ke-size="size26">사업 신청</h2>
-<p data-ke-size="size16">사업신청은 ‘소상공인24(<a href="www.sbiz24.kr">www.sbiz24.kr</a>)’를 통해 할 수 있습니다.</p>
+<p data-ke-size="size16">사업신청은 ‘소상공인24’를 통해 할 수 있습니다.</p>
 
 <h2 data-ke-size="size26">장관 발언</h2>
 <p data-ke-size="size16">중소벤처기업부 장관은 “최근 뷰티, 푸드 등의 분야에서 소상공인이 창출하는 스몰 브랜드들의 약진이 전 세계인의 이목을 주목시키고 있다”며 “라이프스타일과 로컬브랜드 혁신기업인 기업가형 소상공인이 국내를 넘어 해외로 시장을 넓혀 글로벌 브랜드로 성장할 수 있도록 적극 지원하겠다”고 밝혔습니다.</p>
 
 <hr>
 
-<p data-ke-size="size16">참고 : 중소벤처기업부 소상공인정책관실 소상공인성장촉진과(044-204-7283)</p>
-<p data-ke-size="size16">자료출처 : <a href="https://newsdao.kr/3305">정책브리핑 www.korea.kr</a></p> 
+<p data-ke-size="size16">참고 : 중소벤처기업부 소상공인정책관실 소상공인성장촉진과(044-204-7283)</p> 
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
