--- a/_posts/2024-06-24-1089.md
+++ b/_posts/2024-06-24-1089.md
@@ -31,33 +31,8 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">해양수산부 정책기획관 기획재정담당관을 통해 관련된 문의나 확인이 가능합니다. (044-200-5134)</p>
 
 <h3><b><span style="color: #1a5490;">정보 출처</span></b></h3>
-<p data-ke-size="size16">해당 정보는 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)를 통해 확인할 수 있습니다.</p>
+<p data-ke-size="size16">해당 정보는 정책브리핑를 통해 확인할 수 있습니다.</p>
 
-<h3>해당 기사의 사실 확인</h3>
-<p data-ke-size="size16">해수부 "수산자원조성금 폐지·방제분담금 인하 결정된 바 없다" - 해양수산부 발표를 통해 뉴스다오(<a href="https://newsdao.kr/3291">https://newsdao.kr/3291</a>)에서 확인할 수 있습니다.</p>
-<table>
-  <caption></caption>
-  <colgroup>
-    <col />
-    <col />
-  </colgroup>
-  <thead>
-    <tr>
-      <th style="text-align: center; height: 17px;"><b>자료출처</b></th>
-      <th style="text-align: center; height: 17px;"><b>링크</b></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td style="text-align: center; height: 17px;"><b>정책브리핑</b></td>
-      <td style="text-align: center; height: 17px;"><a href="www.korea.kr">www.korea.kr</a></td>
-    </tr>
-    <tr>
-      <td style="text-align: center; height: 17px;"><b>뉴스다오</b></td>
-      <td style="text-align: center; height: 17px;"><a href="https://newsdao.kr/3291">https://newsdao.kr/3291</a></td>
-    </tr>
-  </tbody>
-</table>
 <p data-ke-size="size16">&nbsp;</p> 
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
