--- a/_posts/2024-06-24-1135.md
+++ b/_posts/2024-06-24-1135.md
@@ -1,7 +1,5 @@
 ---
-title: 의사 충원 시급 이유 보건복지부  이목을 끌기 위한 단어로 제목을 만들어보겠습니다.
-
-의사 충원 시급한 보건복지부의 이유는 무엇일까요?
+title: 의사 충원 시급한 보건복지부의 이유는 무엇일까요?
 categories:
   - News
 excerpt: >
