--- a/_posts/2024-06-24-1201.md
+++ b/_posts/2024-06-24-1201.md
@@ -25,7 +25,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">이후 농식품부는 국민들의 과일 구매 부담을 덜어드리기 위해 설 성수기 동안 사과와 배 공급 물량을 평시 대비 2배 이상 확대하고, 역대 최대 규모의 농축산물 할인 지원과 유통업계와의 협력을 통해 가격을 관리하였습니다. 또한, 설 이후에도 할인 지원과 국내산 대체 품목 공급을 위한 노력을 지속하고 있으며, 생육관리와 출하지원 등을 통해 24년 주요 과실의 생산 안정을 위해 민관 합동 "생육관리 협의체"를 구성하고 운영하고 있습니다.</p>
 
 <h3>정책브리핑 자료 출처</h3>
-<p data-ke-size="size16">본 데이터 출처는 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)로 제공되었습니다. 자세한 내용은 해당 출처에서 확인하실 수 있습니다.</p>
+<p data-ke-size="size16">본 데이터 출처는 정책브리핑로 제공되었습니다. 자세한 내용은 해당 출처에서 확인하실 수 있습니다.</p>
 
 <table>
   <tr>
