--- a/_posts/2024-06-24-1230.md
+++ b/_posts/2024-06-24-1230.md
@@ -55,7 +55,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
    <td style="width: 87px; text-align: center;">-</td>
    <td style="width: 90px; text-align: center;">044-203-3904</td>
    <td style="width: 90px; text-align: center;">-</td>
-   <td style="width: 167px; text-align: center;"><a href="http://www.mss.go.kr" target="_blank">중소벤처기업부 누리집</a></td>
+   <td style="width: 167px; text-align: center;"><a href="https://www.mss.go.kr" target="_blank">중소벤처기업부 누리집</a></td>
   </tr>
 </table>
 <hr> 
