--- a/_posts/2024-06-24-1236.md
+++ b/_posts/2024-06-24-1236.md
@@ -28,7 +28,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">지원 품목으로는 화학물질 취급사업장의 국소배기장치와 급·배기 환기장치, 그리고 조리시설용 환기장치가 포함됩니다.</p>
 
 <h3>신청 방법</h3>
-<p data-ke-size="size16">지원을 희망하는 사업장은 근처 안전보건공단 광역본부·지역본부·지사에 방문 또는 우편으로 접수·신청할 수 있으며, 자세한 사항은 공단 누리집(<a href="http://www.kosha.or.kr">www.kosha.or.kr</a>)에서 확인하거나 1644-8845로 문의할 수 있습니다.</p>
+<p data-ke-size="size16">지원을 희망하는 사업장은 근처 안전보건공단 광역본부·지역본부·지사에 방문 또는 우편으로 접수·신청할 수 있으며, 자세한 사항은 공단 누리집(<a href="https://www.kosha.or.kr">www.kosha.or.kr</a>)에서 확인하거나 1644-8845로 문의할 수 있습니다.</p>
 
 <h3>안전보건공단 이사장의 메시지</h3>
 <p data-ke-size="size16">안전보건공단 이사장은 “화학물질 중독사고 예방을 위해 가장 중요한 것은 적절한 환기장치의 설치”라며 “환기장치 설치비용 지원 사업이 쾌적하고 건강한 일터를 만드는 데 큰 역할을 하기를 바란다”고 밝혔습니다.</p>
@@ -51,7 +51,6 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 		<td style="text-align: center; height: 17px;">50%</td>
 	</tr>
 </table>
-<p data-ke-size="size16">자료출처: 정책브리핑 <a href="http://www.korea.kr">www.korea.kr</a></p>
 <p data-ke-size="size16">문의: 안전보건공단 산업보건실 보건사업부(052-703-0148)</p>
 <p data-ke-size="size16">&nbsp;</p> 
 
