--- a/_posts/2024-06-24-1263.md
+++ b/_posts/2024-06-24-1263.md
@@ -25,7 +25,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">금융당국은 현재 거래소 등 유관기관과 "기업 밸류업 프로그램"의 세부방안을 논의중에 있습니다. 그러나 100대 기업을 선정·인증·공시하는 방식과 관련된 내용은 아직까지 검토되지 않았으므로 보도에 대해 신중한 접근이 필요하다고 설명하였습니다.</p>
 
 <h2 data-ke-size="size26">자료 출처</h2>
-<p data-ke-size="size16">이번 기사는 금융위원회의 설명을 기반으로 하였으며, 출처는 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)입니다.</p>
+<p data-ke-size="size16">이번 기사는 금융위원회의 설명을 기반으로 하였으며, 출처는 정책브리핑입니다.</p>
 <p data-ke-size="size16">&nbsp;</p> 
 
 빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
