--- a/_posts/2024-06-14-26.md
+++ b/_posts/2024-06-14-26.md
@@ -3,11 +3,11 @@ title: 노인학대, 취업제한, 예방 조치 강화로 신고 급증
 categories:
   - News
 excerpt: >
-  정부의 노인학대 대응 정책 및 현황    노인학대의 증가와 정부의 대응책  노인 학대는 점점 증가하는 심각한…
+  정부의 노인학대 대응 정책 및 현황https노인학대의 증가와 정부의 대응책  노인 학대는 점점 증가하는 심각한…
 feature_text: >
   ## 뉴스다오 실시간 뉴스 속보입니다.
 
-  정부의 노인학대 대응 정책 및 현황    노인학대의 증가와 정부의 대응책  노인 학대는 점점 증가하는 심각한…
+  정부의 노인학대 대응 정책 및 현황노인학대의 증가와 정부의 대응책  노인 학대는 점점 증가하는 심각한…
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
