--- a/_posts/2024-07-08-1973.md
+++ b/_posts/2024-07-08-1973.md
@@ -11,9 +11,9 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-![뉴스다오 속보](httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
+![뉴스다오 속보](https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
 
-<p>출처: <a href="httpss://newsdao.kr/2674" rel="dofollow">내년 상반기 세종보 정상화 완료…7700명 사용가능 전력 기대 - 환경부</a> | 뉴스다오</p>
+<p>출처: <a href="https://newsdao.kr/2674" rel="dofollow">내년 상반기 세종보 정상화 완료…7700명 사용가능 전력 기대 - 환경부</a> | 뉴스다오</p>
 
 <h2 data-ke-size="size26">세종보 정상화 사업 점검 및 운영 개선 계획 소개</h2>
 세종보가 정상화되면 연간 약 7700명이 사용할 수 있는 전력인 약 9300MWh가 소수력발전으로 생산될 예정입니다. 이에 따라 환경부는 세종보 및 소수력발전 시설의 정비를 위해 사업을 진행하고 있습니다.
@@ -29,6 +29,6 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 세종보 정상화 및 금강 일대의 보 정비를 통해 지역의 발전에 기여할 것이라고 강조하며, 환경부는 이에 적극 지원할 계획이라고 밝혔습니다. 
 
-빠르고 정확한 뉴스를 원한다면? 바로, <a href="httpss://newsdao.kr" rel="dofollow">httpss://newsdao.kr</a>
+빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
 
