--- a/_posts/2024-07-08-1974.md
+++ b/_posts/2024-07-08-1974.md
@@ -13,7 +13,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 ![뉴스다오 속보](httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
 
-<p>출처: <a href="httpss://newsdao.kr/2673" rel="dofollow">겨울 대설·한파 ‘상시 비상대응체계’ 유지…우려지역 집중관리 - 행정안전부</a> | 뉴스다오</p>
+<p>출처: <a href="https://newsdao.kr/2673" rel="dofollow">겨울 대설·한파 ‘상시 비상대응체계’ 유지…우려지역 집중관리 - 행정안전부</a> | 뉴스다오</p>
 
 <h2>한파 대비 대책 및 안전조치 안내</h2>
 <p data-ke-size="size16">한파와 대설로 인한 피해를 최소화하고 안전한 겨울철을 보내기 위해 정부가 상시 비상대응체계를 유지하고 다양한 안전조치를 추진하고 있습니다. 아래는 행정안전부에서 발표한 대설·한파 대책과 안전조치에 대한 내용입니다.</p>
