--- a/_posts/2024-07-08-1975.md
+++ b/_posts/2024-07-08-1975.md
@@ -13,7 +13,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 ![뉴스다오 속보](httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
 
-<p>출처: <a href="httpss://newsdao.kr/2672" rel="dofollow">지하철 5G 28㎓ 와이파이, 이음5G 대역으로 계속 쓴다 - 과학기술정보통신부</a> | 뉴스다오</p>
+<p>출처: <a href="https://newsdao.kr/2672" rel="dofollow">지하철 5G 28㎓ 와이파이, 이음5G 대역으로 계속 쓴다 - 과학기술정보통신부</a> | 뉴스다오</p>
 
 <h2>지하철 5G 28㎓ 와이파이, 이음5G 대역으로 계속 쓴다</h2>
 
