--- a/_posts/2024-07-08-1976.md
+++ b/_posts/2024-07-08-1976.md
@@ -13,7 +13,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 ![뉴스다오 속보](httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
 
-<p>출처: <a href="httpss://newsdao.kr/2671" rel="dofollow">무안, 진천·음성, 울산 중구, 지역특구 신규 지정 - 중소벤처기업부</a> | 뉴스다오</p>
+<p>출처: <a href="https://newsdao.kr/2671" rel="dofollow">무안, 진천·음성, 울산 중구, 지역특구 신규 지정 - 중소벤처기업부</a> | 뉴스다오</p>
 
 <h2 data-ke-size="size26">무안, 진천·음성, 울산 중구, 지역특구 신규 지정</h2>
 <p data-ke-size="size16">29일, 중소벤처기업부에서는 제55차 지역특화발전특구위원회를 열어 3개 특구를 신규 지정하고 9개 특구를 지정해제함으로써 총 14건의 안건을 심의·의결했습니다. 무안, 진천·음성, 울산 중구에서 신규로 특구가 지정되었으며, 이에 대한 상세 내용을 살펴보겠습니다.</p>
