--- a/_posts/2024-07-08-1974.md
+++ b/_posts/2024-07-08-1974.md
@@ -11,7 +11,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-![뉴스다오 속보](httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
+![뉴스다오 속보](https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
 
 <p>출처: <a href="https://newsdao.kr/2673" rel="dofollow">겨울 대설·한파 ‘상시 비상대응체계’ 유지…우려지역 집중관리 - 행정안전부</a> | 뉴스다오</p>
 
@@ -48,6 +48,6 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 </table>
 <hr> 
 
-빠르고 정확한 뉴스를 원한다면? 바로, <a href="httpss://newsdao.kr" rel="dofollow">httpss://newsdao.kr</a>
+빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
 
