--- a/_posts/2024-07-08-1975.md
+++ b/_posts/2024-07-08-1975.md
@@ -11,7 +11,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-![뉴스다오 속보](httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
+![뉴스다오 속보](https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
 
 <p>출처: <a href="https://newsdao.kr/2672" rel="dofollow">지하철 5G 28㎓ 와이파이, 이음5G 대역으로 계속 쓴다 - 과학기술정보통신부</a> | 뉴스다오</p>
 
@@ -55,10 +55,10 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p data-ke-size="size16">문의 : 과학기술정보통신부 전파정책국 전파자원관리팀(044-202-4938)</p>
 
-<p data-ke-size="size16">자료출처: <a href="httpss://https://www.korea.kr/news/policyNewsView.do?newsId=147546619" target="_blank">정책브리핑 https://www.korea.kr</a></p>
+<p data-ke-size="size16">자료출처: <a href="https://https://www.korea.kr/news/policyNewsView.do?newsId=147546619" target="_blank">정책브리핑 https://www.korea.kr</a></p>
 
-<p data-ke-size="size16">출처: <a href="httpss://newsdao.kr/2672" target="_blank">지하철 5G 28㎓ 와이파이, 이음5G 대역으로 계속 쓴다 - 과학기술정보통신부 | 뉴스다오</a></p> 
+<p data-ke-size="size16">출처: <a href="https://newsdao.kr/2672" target="_blank">지하철 5G 28㎓ 와이파이, 이음5G 대역으로 계속 쓴다 - 과학기술정보통신부 | 뉴스다오</a></p> 
 
-빠르고 정확한 뉴스를 원한다면? 바로, <a href="httpss://newsdao.kr" rel="dofollow">httpss://newsdao.kr</a>
+빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
 
