--- a/_posts/2024-07-08-1976.md
+++ b/_posts/2024-07-08-1976.md
@@ -11,7 +11,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-![뉴스다오 속보](httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
+![뉴스다오 속보](https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg)
 
 <p>출처: <a href="https://newsdao.kr/2671" rel="dofollow">무안, 진천·음성, 울산 중구, 지역특구 신규 지정 - 중소벤처기업부</a> | 뉴스다오</p>
 
@@ -75,6 +75,6 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p data-ke-size="size16">&nbsp;</p> 
 
-빠르고 정확한 뉴스를 원한다면? 바로, <a href="httpss://newsdao.kr" rel="dofollow">httpss://newsdao.kr</a>
+빠르고 정확한 뉴스를 원한다면? 바로, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
 
